# AIAIM

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run_phase11_hotkey_runner.bat
config/: README.md  phase2_prelabel_config.json  phase7-cursor-positioning.json  phase75-relative-mouse-feasibility.json  phase8-one-shot-relative-aim.json
configs/: phase11_hotkey_runner.json
data/: README.md
docs/: agent-team.md  annotation-guidelines.md  dataset-preparation.md  mcp-plan.md  phase-roadmap.md  project-overview.md  safety-boundary.md
scripts/: eval_yolo_baseline.py  export_optimized_model.py  live_direct_cursor_position.py  live_finite_repeat_aim_click.py  live_one_shot_click_gate.py  live_one_shot_fov_aim.py  live_one_shot_relative_aim.py  live_readonly_detect.py  live_relative_mouse_feasibility.py  offline_coordinate_mapping.py  offline_detect.py  phase11_hotkey_runner.py  phase25_data_patch.py  predict_yolo_review.py  prelabel_yellow_ball_opencv.py  prepare_phase2_dataset.py  split_yolo_dataset.py  train_yolo_baseline.py  validate_yolo_dataset.py
tests/: test_phase10_1_after_validation.py  test_phase10_2_retry_and_fast_mode.py  test_phase10_3_2_warmup_and_csv_headers.py  test_phase10_3_3_no_detection_continue.py  test_phase10_3_4_no_detection_evidence_and_loop_semantics.py  test_phase10_3_5_live_detection_parity.py  test_phase10_3_6_after_missing_retry.py  test_phase10_3_7_terminal_classification.py  test_phase10_3_capture_timing_separation.py  test_phase10_3_fast_capture_and_click_guard.py  test_phase10_finite_repeat_aim_click.py  (+4 more)
(+4229 files in other folders)
